# zettelwarrior

./: .gitignore  CHANGELOG.md  Makefile  README.md  noxfile.py  pyproject.toml
examples/: .zwrc  220612-1235.md  example_note.md  tags.md
src/zettelwarrior/: cli.py  config.py  zettel.py  zettelkasten.py  zettelwarrior.py
tests/: test_config.py  test_zettel.py  test_zettelwarrior.py
